--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Welcome</h1>
-						<p>My landing page.</p>
+						<p>My landing page..</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
