--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,6 +4,7 @@
         <li><a href="generic.html">Generic Page</a></li>
         <li><a href="elements.html">Elements Reference</a></li>
         <li><a href="https://blog.ferdi.id">Go to Blog</a></li>
+        <li><a href="posts.html">List posts</a></li>
         {% endif %}
 
         {% if page.menu == "generic" %}
@@ -11,6 +12,7 @@
         <li class="active"><a href="generic.html">Generic Page</a></li>
         <li><a href="elements.html">Elements Reference</a></li>
         <li><a href="https://blog.ferdi.id">Go to Blog</a></li>
+        
         {% endif %}
 
         {% if page.menu == "elements" %}
@@ -18,5 +20,22 @@
         <li><a href="generic.html">Generic Page</a></li>
         <li class="active"><a href="elements.html">Elements Reference</a></li>
         <li><a href="https://blog.ferdi.id">Go to Blog</a></li>
+        <li><a href="posts.html">List posts</a></li>
+        {% endif %}
+
+        {% if page.menu == "blog" %}
+        <li><a href="index.html">This is Massively</a></li>
+        <li><a href="generic.html">Generic Page</a></li>
+        <li class="active"><a href="elements.html">Elements Reference</a></li>
+        <li><a href="https://blog.ferdi.id">Go to Blog</a></li>
+        <li><a href="posts.html">List posts</a></li>
+        {% endif %}
+
+        {% if page.menu == "posts" %}
+        <li><a href="index.html">This is Massively</a></li>
+        <li><a href="generic.html">Generic Page</a></li>
+        <li><a href="elements.html">Elements Reference</a></li>
+        <li><a href="https://blog.ferdi.id">Go to Blog</a></li>
+        <li class="active"><a href="posts.html">List posts</a></li>
         {% endif %}
     </ul>
