--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
                                     <h2><a href="#">Sed magna<br />
                                     ipsum faucibus</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="/images/pic02.jpg" alt="" /></a>
                                 <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                                 <ul class="actions">
                                     <li><a href="#" class="button">Full Story</a></li>
@@ -27,7 +27,7 @@ layout: default
                                     <h2><a href="#">Primis eget<br />
                                     imperdiet lorem</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="/images/pic03.jpg" alt="" /></a>
                                 <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                                 <ul class="actions">
                                     <li><a href="#" class="button">Full Story</a></li>
@@ -39,7 +39,7 @@ layout: default
                                     <h2><a href="#">Ante mattis<br />
                                     interdum dolor</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="/images/pic04.jpg" alt="" /></a>
                                 <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                                 <ul class="actions">
                                     <li><a href="#" class="button">Full Story</a></li>
@@ -51,7 +51,7 @@ layout: default
                                     <h2><a href="#">Tempus sed<br />
                                     nulla imperdiet</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="/images/pic05.jpg" alt="" /></a>
                                 <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                                 <ul class="actions">
                                     <li><a href="#" class="button">Full Story</a></li>
@@ -63,7 +63,7 @@ layout: default
                                     <h2><a href="#">Odio magna<br />
                                     sed consectetur</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="/images/pic06.jpg" alt="" /></a>
                                 <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                                 <ul class="actions">
                                     <li><a href="#" class="button">Full Story</a></li>
@@ -75,7 +75,7 @@ layout: default
                                     <h2><a href="#">Augue lorem<br />
                                     primis vestibulum</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="/images/pic07.jpg" alt="" /></a>
                                 <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
                                 <ul class="actions">
                                     <li><a href="#" class="button">Full Story</a></li>
