--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,11 +82,11 @@
 								<h3>Address</h3>
 								<p>1234 Somewhere Road #87257<br />
 								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
 							</section> -->
+							<section>
+								<h3>Links</h3>
+								<p><a href="/links.html">(000) 000-0000</a></p>
+							</section> 
 							<section>
 								<h3>Email</h3>
 								<p><a >{{ site.email }}</a></p>
