Fix menu reference to external blog

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -23,7 +23,7 @@
         class="active"
         {% endif %}
         >
-            <a href="/https://blog.ferdi.id">Go to Blog</a></li>
+            <a href="https://blog.ferdi.id">Go to Blog</a></li>
         <li
         {% if page.menu == "posts" %}
         class="active"
