--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,101 +1,42 @@
 ---
 layout: default
 ---
-<!-- Main -->
-                <div id="main">
+{{content}}
 
-                    <!-- Featured Post -->
-                    {{ content }}
+<!-- Section -->
+<section>
+        <header class="major">
+            <h2>Some facts about me</h2>
+        </header>
+        <div class="features">
+                {% for fact in site.data.facts %}
+                <article>
+                        <span class="icon {{ fact.fa-icon }}"></span>
+                        <div class="content">
+                            <h3>{{ fact.fact }}</h3>
+                            <p>{{ fact.desc }}</p>
+                        </div>
+                    </article>
+                {% endfor %}
+        </div>
+    </section>
 
-                    <!-- Posts -->
-                        <section class="posts">
-                            <article>
-                                <header>
-                                    <span class="date">April 24, 2017</span>
-                                    <h2><a href="#">Sed magna<br />
-                                    ipsum faucibus</a></h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="/images/pic02.jpg" alt="" /></a>
-                                <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button">Full Story</a></li>
-                                </ul>
-                            </article>
-                            <article>
-                                <header>
-                                    <span class="date">April 22, 2017</span>
-                                    <h2><a href="#">Primis eget<br />
-                                    imperdiet lorem</a></h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="/images/pic03.jpg" alt="" /></a>
-                                <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button">Full Story</a></li>
-                                </ul>
-                            </article>
-                            <article>
-                                <header>
-                                    <span class="date">April 18, 2017</span>
-                                    <h2><a href="#">Ante mattis<br />
-                                    interdum dolor</a></h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="/images/pic04.jpg" alt="" /></a>
-                                <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button">Full Story</a></li>
-                                </ul>
-                            </article>
-                            <article>
-                                <header>
-                                    <span class="date">April 14, 2017</span>
-                                    <h2><a href="#">Tempus sed<br />
-                                    nulla imperdiet</a></h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="/images/pic05.jpg" alt="" /></a>
-                                <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button">Full Story</a></li>
-                                </ul>
-                            </article>
-                            <article>
-                                <header>
-                                    <span class="date">April 11, 2017</span>
-                                    <h2><a href="#">Odio magna<br />
-                                    sed consectetur</a></h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="/images/pic06.jpg" alt="" /></a>
-                                <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button">Full Story</a></li>
-                                </ul>
-                            </article>
-                            <article>
-                                <header>
-                                    <span class="date">April 7, 2017</span>
-                                    <h2><a href="#">Augue lorem<br />
-                                    primis vestibulum</a></h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="/images/pic07.jpg" alt="" /></a>
-                                <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button">Full Story</a></li>
-                                </ul>
-                            </article>
-                        </section>
+<!-- Section -->
+    <section>
+        <header class="major">
+            <h2>Recent posts</h2>
+        </header>
+        <div class="posts">
+                {% for post in site.posts limit:6 %}
+                <article>
+                        <a href="#" class="image"><img src="/images/pic01.jpg" alt="" /></a>
+                        <h3>{{ post.title }}</h3>
+                        {{ post.excerpt }}
+                        <ul class="actions">
+                            <li><a href="{{ post.url }}" class="button">Read more...</a></li>
+                        </ul>
+                    </article>
+                {% endfor %}
+        </div>
+    </section>
 
-                    <!-- Footer -->
-                        <footer>
-                            <div class="pagination">
-                                <!--<a href="#" class="previous">Prev</a>-->
-                                <a href="#" class="page active">1</a>
-                                <a href="#" class="page">2</a>
-                                <a href="#" class="page">3</a>
-                                <span class="extra">&hellip;</span>
-                                <a href="#" class="page">8</a>
-                                <a href="#" class="page">9</a>
-                                <a href="#" class="page">10</a>
-                                <a href="#" class="next">Next</a>
-                            </div>
-                        </footer>
-
-                </div>
